v0.12
	* FIX : scroll redraw bug yahoo images don't redraw (fixes #1172)
	* FIX : scroll redraw bug streetnames left behind (fixes #1171)
	* ADD : SlippyMap remembers last used view
	* FIX : remove support for internal webkit. As of now, Qt 4.4+ is required for Yahoo! imagery.
	* ADD : let the use choose between translating standard OSM tags
	* ADD : ability to set language explicitly
	* FIX : make "About" dialog more useful
	* FIX : show correct progress when downloading maps
	* FIX : make yahoo maps line up for large views (sync from r10585 by Petr Dlouhy)
	* FIX : GPX track timestamps are in UTC (see gpx 1.1 schema)
	* FIX : change serial port GPS readout from busy looping to signal wakeup
	* FIX : make the heading appear in the satellite tracker
	* ADD : nice satellite strength view widget
	* FIX : OSM export doesn't handle quotes well (Fixes #1139)
	* ADD : Allow osm API url in the "Use OSM link" text box
	* FIX : 'Download more' should work without prior 'Download from web' (Closes #1028)
	* FIX : Joining roads by moving a node from one road on top of another road gives incorrect node sequence (Fixes #1149)
	* ADD : preliminary gpsd supprt
	* FIX : Upload of a modified single GPX track node was not working anymore (fixes #1141)
	* ADD : Support for GeoTagged images. qmake GEOIMAGE=1 to activate. requires exiv2 (by Timo Schlüßler)
	* ADD : Move to the next field on enter in properties dock tags (by Travers Carter) (Refs #1137)
	* ADD : revised OSB format. Allows to use large map files directly from disk with low memory footprint.
	* FIX : Native render doesn't render anything at high lat/long values(by Travers Carter)  (Closes #1135)
	* FIX : Expand tables in the properties dock to the available width by default (by Travers Carter) (Closes #1136)
	* FIX : make download dialog a less cluttered
	* FIX : update the "created_by" tag at each update, not only add.